# chdkptp_rs

./: CLOCKSYNC.html  Cargo.toml  PLAN.html  README.md
examples/: chdk_version.rs  device_info.rs  download_file.rs  exec_lua.rs  list_cameras.rs  live_view.rs  shoot.rs  shoot_all.rs  shoot_all_clocksync.rs  shoot_and_download.rs  upload_file.rs
src/: error.rs  lib.rs  usb.rs
src/chdk/: ext.rs  file.rs  liveview.rs  mod.rs  opcode.rs  script.rs
src/ptp/: codec.rs  container.rs  device_info.rs  mod.rs  opcode.rs  session.rs
tests/: codec.rs
